--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   </script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap');
     @import url('./styles/badges.css');
+    @import url('./styles/rpg.css');
     /* Custom scrollbar for webkit browsers */
     ::-webkit-scrollbar {
       width: 8px;
