--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IGCSE Music 2026 Study Hub</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class', // Enable class-based dark mode
-      theme: {
-        extend: {
-          // Custom theme extensions can go here
-        },
-      },
-    };
-  </script>
+  
+  <!-- Removed Tailwind CDN (now using build-time Tailwind) -->
+  
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap');
@@ -94,18 +86,9 @@
         background-color: #38bdf8; /* sky-400 */
     }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai",
-    "react-router-dom": "https://esm.sh/react-router-dom@^6.24.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.0.0/",
-    "react/": "https://esm.sh/react@^19.0.0/",
-    "react": "https://esm.sh/react@^19.0.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+  
+  <!-- Removed importmap; Vite handles module resolution/bundling -->
+  
 </head>
 <body class="bg-gray-100 dark:bg-slate-900">
   <div id="root"></div>
